--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,15 @@ pandas==2.1.3
 redis==5.0.1
 python-multipart==0.0.6
 pydantic==2.5.0
+scikit-learn==1.3.2
+
+# Database dependencies
+sqlalchemy==2.0.23
+alembic==1.13.1
+
+# File processing
+openpyxl==3.1.2  # For Excel files
+xlrd==2.0.1      # For older Excel files
+
+# Background jobs (for future use)
+celery==5.3.4
