--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ python-multipart==0.0.6
 pydantic==2.5.0
 scikit-learn==1.3.2
 pandas==2.1.3
-
+numpy==1.26.4
 # Database dependencies
 sqlalchemy==2.0.23
 alembic==1.13.1
@@ -15,11 +15,13 @@ openpyxl==3.1.2
 xlrd==2.0.1
 
 # ML dependencies - universal versions that work
-torch
-transformers>=4.30.0,<4.36.0
-huggingface-hub>=0.16.0,<0.18.0
-sentence-transformers==2.2.2
 
+torch==2.7.1
+torchvision==0.22.1
+transformers==4.52.4
+sentence-transformers==4.1.0
+huggingface-hub==0.33.0
 # Optional (for later)
 redis==5.0.1
 celery==5.3.4
+
