--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,9 +3,12 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 pydantic==2.5.0
+
+# Scientific computing
+numpy==1.26.4
 scikit-learn==1.3.2
 pandas==2.1.3
-numpy==1.26.4
+
 # Database dependencies
 sqlalchemy==2.0.23
 alembic==1.13.1
@@ -30,3 +33,6 @@ psycopg2-binary==2.9.10
 #pinecone-client>=3.0.0
 #python-dotenv>=1.0.0
 chromadb>=0.4.0
+
+# PHI scrubbing 
+spacy==3.7.2
