--- a/Suadeo/backend/Dockerfile
+++ b/Suadeo/backend/Dockerfile
@@ -18,6 +18,9 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Download spaCy model for PHI scrubbing
+RUN python -m spacy download en_core_web_sm
+
 # Copy application code
 COPY . .
 
