--- a/Suadeo/docker-compose.yml
+++ b/Suadeo/docker-compose.yml
@@ -57,20 +57,22 @@ services:
     image: chromadb/chroma:latest
     container_name: fhir_chroma
     ports:
-      - "8001:8001"
+      - "8001:8000"
     volumes:
       - chroma_data:/chroma/chroma
     environment:
       - IS_PERSISTENT=TRUE
       - ANONYMIZED_TELEMETRY=FALSE
       - CHROMA_HOST=0.0.0.0     
-      - CHROMA_PORT=8001         
+      - CHROMA_PORT=8000
+      - CHROMA_SERVER_PERSIST_DIRECTORY=/chroma/chroma         
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8001/api/v1/heartbeat"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
     networks:
       - fhir_network
 
@@ -111,7 +113,7 @@ services:
       
       # Chroma Configuration
       - CHROMA_HOST=chroma
-      - CHROMA_PORT=8001
+      - CHROMA_PORT=8000
       - CHROMA_COLLECTION_NAME=fhir_profiles
       
       # Ollama Configuration
